# CSGO-QOL-Scripts

./: config.yaml  globalhotkeys.py  main.py  pyproject.toml  readme.md  requirements.txt  settings-example.json
.github/workflows/: main.yml
src/: __init__.py  main.py  main.spec
