[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "QOL-Scripts"
version = "0.1.0"
description = "Gaming project"

    "pyautogui",
    "screen-brightness-control",
    "pypiwin32",
    "keyboard",
    "pystray",
    "pillow",
    "appdirs",
    "sv-ttk",
    "darkdetect",
    "pywinstyles",
    "pyinstaller"
]